--- a/app/src/main/res/layout/fragment_umpire_list.xml
+++ b/app/src/main/res/layout/fragment_umpire_list.xml
@@ -51,7 +51,7 @@
             android:layout_margin="@dimen/_5dp"
             android:layout_weight=".7"
             android:padding="@dimen/_5dp"
-            android:text="TOP COACHES"
+            android:text="TOP Umpires"
             android:textColor="@color/black"
             android:textSize="@dimen/_14dp" />
 
