--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
@@ -35,7 +35,7 @@
                 android:padding="@dimen/_5dp">
 
                 <TextView
-                    android:id="@+id/dateTime"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1 June 2018,04:09 PM"
@@ -43,29 +43,16 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/day"
+                    android:id="@+id/address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="FRIDAY"
                     android:textSize="@dimen/_12dp" />
 
-                <TextView
-                    android:id="@+id/planid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="INDIA VS USA"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
+
 
                 <TextView
-                    android:id="@+id/matchType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TEST(3/4)"
-                    android:textSize="@dimen/_12dp" />
-
-                <TextView
-                    android:id="@+id/venue"
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="New Delhi INDIA"
@@ -78,4 +65,4 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+</LinearLayout>
