--- a/app/src/main/res/layout/fragment_team_detail.xml
+++ b/app/src/main/res/layout/fragment_team_detail.xml
@@ -165,6 +165,12 @@
                         android:textStyle="bold" />
 
 
+                   <!-- <android.support.v7.widget.RecyclerView
+                        android:id="@+id/tgallaryIMageviewPager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:itemMargin="@dimen/_70dp" />-->
+
                     <com.kredivation.aakhale.pagerlib.MetalRecyclerViewPager
                         android:id="@+id/tgallaryIMageviewPager"
                         android:layout_width="match_parent"
@@ -184,81 +190,10 @@
                     android:textStyle="bold" />
 
 
-                <LinearLayout
+                <ListView
+                    android:id="@+id/matchPlayeList"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:padding="@dimen/_5dp">
-
-                        <TextView
-                            android:id="@+id/tmeavsteam"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="IND VS AUS "
-                            android:textSize="@dimen/_14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/stadiumaddress"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Noida Cricket Stadium"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="25 Aug 2018"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:padding="@dimen/_5dp">
-
-                    <TextView
-                        android:id="@+id/tmeavsteam1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="IND VS AUS "
-                        android:textSize="@dimen/_14dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/stadiumaddress1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Noida Cricket Stadium"
-                        android:textSize="@dimen/_12dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/date1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="25 Aug 2018"
-                        android:textSize="@dimen/_12dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                    android:layout_height="wrap_content" />
 
 
             </LinearLayout>
