--- a/app/src/main/res/layout/fragment_acadamics_detail.xml
+++ b/app/src/main/res/layout/fragment_acadamics_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -115,12 +116,31 @@
                     android:textSize="@dimen/_14dp"
                     android:textStyle="bold" />
 
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/imageViewList"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    android:elevation="@dimen/_5dp"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardUseCompatPadding="true">
+
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/galeeryImageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_5dp"
+
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_5dp" />
+                    </HorizontalScrollView>
+
+
+                </android.support.v7.widget.CardView>
+
             </LinearLayout>
 
             <LinearLayout
@@ -139,11 +159,30 @@
                     android:textStyle="bold" />
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/servicesList"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    android:elevation="@dimen/_5dp"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardUseCompatPadding="true">
+
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/servicesLayoutView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_5dp"
+
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_5dp" />
+                    </HorizontalScrollView>
+
+
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
 
@@ -163,11 +202,29 @@
                     android:textStyle="bold" />
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/teamsList"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    android:elevation="@dimen/_5dp"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardUseCompatPadding="true">
+
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/teamLiastView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_5dp"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_5dp" />
+                    </HorizontalScrollView>
+
+
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
