--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -94,11 +95,28 @@
                     android:textStyle="bold" />
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/teameList"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white" />
+                    android:elevation="@dimen/_5dp"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardUseCompatPadding="true">
+
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/teamsView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_5dp"
+                            android:orientation="horizontal" />
+                    </HorizontalScrollView>
+
+
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
 
@@ -293,11 +311,28 @@
                         android:textStyle="bold" />
 
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/umpiresList"
+                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/white" />
+                        android:elevation="@dimen/_5dp"
+                        app:cardCornerRadius="@dimen/_5dp"
+                        app:cardUseCompatPadding="true">
+
+
+                        <HorizontalScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/umpireView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/_5dp"
+                                android:orientation="horizontal" />
+                        </HorizontalScrollView>
+
+
+                    </android.support.v7.widget.CardView>
                 </LinearLayout>
 
             </LinearLayout>
